--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
   <div class="container">
+    <h1>CSS - responsive image video</h1>
     <img src="http://lorempixel.com/400/200/sports/1/">
     <hr>
     <iframe width="560" height="315" src="//www.youtube.com/embed/Nln3jrIq8SI" frameborder="0" allowfullscreen></iframe>
