--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <h1>CSS - responsive image video</h1>
     <img src="http://lorempixel.com/400/200/sports/1/">
     <hr>
-    <iframe width="560" height="315" src="//www.youtube.com/embed/Nln3jrIq8SI" frameborder="0" allowfullscreen></iframe>
+    <div class="video-holder"></div>
+      <iframe width="560" height="315" src="//www.youtube.com/embed/Nln3jrIq8SI" frameborder="0" allowfullscreen></iframe>
+    </div>
   </div>
 </body>
 </html>
