--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>CSS - responsive image video</h1>
     <img src="http://lorempixel.com/400/200/sports/1/" alt="original pixel 400 x 200">
     <hr>
-    <div class="video-holder"></div>
+    <div class="video-holder">
       <iframe width="560" height="315" src="//www.youtube.com/embed/Nln3jrIq8SI" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
