--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
   <title>CSS - responsive image video</title>
 </head>
 <body>
-  <div class="container">
-    <h1>CSS - responsive image video</h1>
+  <h1>CSS - responsive image video</h1>
     <img src="http://lorempixel.com/400/200/sports/1/" alt="original pixel 400 x 200">
     <hr>
+
     <div class="video-holder">
-      <!-- <iframe width="560" height="315" src="//www.youtube.com/embed/Nln3jrIq8SI" frameborder="0" allowfullscreen></iframe>
-    
-      -->
+      <iframe width="560" height="315" src="//www.youtube.com/embed/Nln3jrIq8SI" frameborder="0" allowfullscreen></iframe>
     </div>
-  </div>
 </body>
 </html>
