--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
   <h1>CSS - responsive image video</h1>
     <img src="http://lorempixel.com/400/200/sports/1/" alt="original pixel 400 x 200">
+    <p>picture original pixel 400 x 200</p>
     <hr>
 
     <div class="video-holder">
