--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
     
     <h1>CSS - responsive image video</h1>
     <img src="http://lorempixel.com/400/200/sports/1/" alt="original pixel 400 x 200">
-    <p>picture original pixel 400 x 200</p>
+    <p>original picture pixel 400 x 200</p>
     <hr>
 
     <div class="video-holder">
       <iframe width="560" height="315" src="//www.youtube.com/embed/Nln3jrIq8SI" frameborder="0" allowfullscreen></iframe>
+      <p>original youtube iframe 560 x 315</p>
     </div>
 
     <!-- FOOTER  -->
