--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 <body>
   <h1>CSS - responsive image video</h1>
     <img src="http://lorempixel.com/400/200/sports/1/" alt="original pixel 400 x 200">
-    <p>picture original pixel 400 x 200</p>
+    <p>original picture pixel 400 x 200</p>
+    <br />
     <hr>
-
+    <br />
     <div class="video-holder">
       <iframe width="560" height="315" src="//www.youtube.com/embed/Nln3jrIq8SI" frameborder="0" allowfullscreen></iframe>
     </div>
